<resources>
    <string name="app_name">UIWidgets(A)</string>
    <string name="custom_toast_demo">Custom toast demo</string>
    <string name="buy_now">buy now</string>
    <string name="thanks_for_purchasing">Thanks for purchasing!!</string>
    <string name="registration">SIGN UP!</string>
    <string name="user_name">Full Name</string>
    <string name="email_id">Email-ID</string>
    <string name="user_name1">User name</string>
    <string name="gender">Gender</string>
    <string name="famale">Famale</string>
    <string name="male">Male</string>
    <string name="cources">Cources</string>
    <string name="c">C++</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">sign in</string>
    <string name="password">Password</string>
    <string name="already_user">Already user?</string>
    <string name="custom_toast">Ripple Effect in Button and Custom toast!</string>
    <string name="exercise">Exercise</string>
    <string name="ui_widgets_a">UI widgets A</string>
    <string name="ui_widgets_b">Ui widgets b</string>
    <string name="theme">Theme</string>
    <string name="ripple_with_border">Ripple with border</string>
    <string name="ripple_effetct">Ripple effetct</string>
    <string name="ripple_effect_demo">Ripple effect demo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_constraint_layout_form">ConstraintLayout_form</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="intrested_in">Intrested in</string>
    <string name="title">Thank you!</string>
    <string name="message">We will be in touch soon</string>
    <string name="ok">OK</string>
    <string name="title_activity_tab_layout_demo">Tab_layout_demo</string>
    <string name="tab_text_1">UI A</string>
    <string name="tab_text_2">UI B</string>
    <string name="tab_text_3">UI C</string>
    <string name="tab_text_4">UI D</string>
    <string name="tab_text_5">UI E</string>
    <string name="title_activity_tabbed_app">Tabbed_app</string>
    <string name="_1">1</string>
    <string name="rishita_panchal">Rishita Panchal</string>
    <string name="_2">2</string>
    <string name="hiral_panchal">Hiral Panchal</string>
    <string name="_3">3</string>
    <string name="hely_pandya">Hely Pandya</string>
    <string name="_2_00_to_3_00">2:00 to 3:00</string>
    <string name="poojan_panchal">Poojan Panchal</string>
    <string name="_4_00_to_6_00">4:00 to 6:00</string>
    <string name="time_slot">Time slot</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="instagram">Instagram</string>
    <string name="your_story">Your story</string>
    <string name="rp_2771">rp_2771</string>
    <string name="get_in_touch">Get In Touch!!</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="msg1">Message</string>
    <string name="send">SEND</string>
    <string name="simple_list_view">Simple List View</string>
    <string name="description">description</string>
    <string name="settings">Settings</string>
    <string name="list_view_with_image">List view with image</string>
    <string name="simple_recycler_view">Simple recycler view</string>
    <string name="recycler_view_with_item_decoration">Recycler view with item decoration</string>
    <string name="toast_msg">This screen is a tab layout demo</string>
    <string name="activity_life_cycle_demo">Activity Life cycle demo</string>
    <string name="table_layout">Table layout</string>
    <string name="tab_layout">Tab layout</string>
    <string name="merge_tag_demo">Merge tag demo</string>
    <string name="constraint_layout_demo">constraint layout demo</string>
    <string name="instagram_design">Instagram design</string>
    <string name="hello_world">HELLO WORLD</string>
    <string name="onstart">onStart() called</string>
    <string name="onDestroy">onDestroy() called</string>
    <string name="onRestart">onRestart() called</string>
    <string name="onPause">onPause() called</string>
    <string name="onResume">onResume() called</string>
    <string name="onStop">onStop() called</string>
    <string name="intent">Intent</string>
    <string name="url">www.google.com</string>
    <string name="go">Go</string>
    <string name="activity_lifecycle">Activity lifecycle</string>
    <string name="text_something">Text something</string>
    <string name="share">Share</string>
    <string name="launch_map">Launch map</string>
    <string name="implicit_intent">Implicit intent</string>
    <string name="implicit_intent_to_using_createchooser">Implicit intent to using createchooser</string>
    <string name="implicit_intent_to_launch_a_map">Implicit intent to launch a map</string>
    <string name="add_a">Add A</string>
    <string name="remove_a">Remove A</string>
    <string name="add_b">Add B</string>
    <string name="fragment_manager">Fragment manager</string>
    <string name="fragment_a_is">Fragment A is :</string>
    <string name="replace_a">Replace A</string>
    <string name="remove_b">Remove B</string>
    <string name="replace_a_with_b">Replace A with B</string>
    <string name="detach_a">Detach A</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="select_something">SELECT SOMETHING</string>
    <string name="text">SELECTED IMAGE FROM GALLARY</string>
    <string name="enter_message">Enter message</string>
    <string name="you_have_entered">You have entered:</string>
    <string name="exercice1">Exercice PR 1</string>
    <string name="exercice2">Exercice PR 2</string>
    <string name="exercice_pr1_3">Exercice PR!_3</string>
    <string name="toastmsg1">From fragment 2</string>
    <string name="toastmsg2">From fragment 1</string>
    <string name="Toastmsg3">Saved data successfully!!</string>
    <string name="practical_2">Practical 2</string>
    <string name="gallary">Gallary</string>
    <string name="add">Add</string>
    <string name="posts">posts</string>
    <string name="new_message">New message</string>
    <string name="c1">C</string>
    <string name="urll">Shared URL : </string>
    <string name="pending_intent_notification">Pending intent notification</string>
    <string name="intent_filter_demo">Intent filter demo</string>
    <string name="pending_intent">Pending Intent</string>
    <string name="shared_image">Shared image</string>
    <string name="dash">-</string>
    <string name="hello_user">Hello user!!</string>
    <string name="expandable_list_view">Expandable List view</string>
    <string name="cuustom_item_decoration">Cuustom item decoration</string>
    <string name="movie_name">Movie name</string>
    <string name="real_name">Real name</string>
    <string name="team">Team</string>
    <string name="appearance">Appearance</string>
    <string name="expandable_recycler">Expandable recycler</string>
    <string name="img_url">Img url</string>
    <string name="created_by">created by</string>
    <string name="publisher">publisher</string>
    <string name="bio">bio</string>
    <string name="movie_details_in_expandable_listview">Movie Details in expandable Listview</string>
    <string name="expandable_recycler_view">Expandable recycler view</string>
    <string name="recent">Recent</string>
    <string name="my_favorites">My favorites</string>
    <string name="view_pager_demo">View pager demo</string>
    <string name="bottom_navigation">Bottom navigation</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_profile">My profile</string>
    <string name="viewpager2">Viewpager2</string>
    <string name="calculator">CALCULATOR</string>
    <string name="simple_list_view1">Simple list view</string>
    <string name="meta">meta</string>
    <string name="its_me1234">its_me1234</string>
    <string name="button1">Button!</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="login">Login</string>
    <string name="list_users">Manual JSON Parsing</string>
    <string name="job">job</string>
    <string name="userEmail">eve.holt@reqres.in</string>
    <string name="userPass">cityslicka</string>
    <string name="hint">Check your logs!</string>
    <string name="search_in_recyclerview">Search In Recyclerview</string>
    <string name="html_file">HTML file</string>
    <string name="local">local pdf</string>
    <string name="url_webview">URL</string>
    <string name="webview">webview</string>
    <string name="nested_scrollview">Nested scrollview</string>
    <string name="horizontal_scrollview_2">Horizontal scrollview 2</string>
    <string name="long_text">NestedScrollView is just like ScrollView , but it supports acting as both a nested scrolling parent and child on both new and old versions of Android. Nested scrolling is enabled by default.NestedScrollView is just like ScrollView , but it supports acting as both a nested scrolling parent and child on both new and old versions of Android. Nested scrolling is enabled by default.</string>
    <string name="nested_scrollview_with_searchview">Nested scrollview with searchview</string>
    <string name="horizontal_scroll_inside_vertical">Horizontal scroll inside vertical</string>
    <string name="horizontal_scrollview">Horizontal scrollview</string>
    <string name="vertical_scrollview">Vertical Scrollview</string>
    <string name="searchview_in_actionbar">Searchview in actionbar</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card number</string>
    <string name="android_components">Android components</string>
    <string name="android_architecture">Android architecture</string>
    <string name="mvp">MVP</string>
    <string name="mvc">MVC</string>
    <string name="mvvm">mvvm</string>
    <string name="binding_adapter_demo">Binding Adapter Demo</string>
    <string name="binding_adapter">Binding Adapter</string>
    <string name="enter_value">Enter value</string>
    <string name="inverse_binding_adapter">Inverse binding adapter</string>
    <string name="enter_number">Enter number</string>
    <string name="result">Result</string>
    <string name="viewmodel_factory">ViewModel Factory</string>
    <string name="coroutines_demo">Coroutines demo</string>
    <string name="add_new_card">Add new card</string>
    <string name="location_permision">Location permision</string>
    <string name="camera_permission">Camera permission</string>
    <string name="runtime_permission">Runtime Permission</string>
    <string name="choose_and_image">Choose and image</string>
    <string name="camera_and_storage">Camera and storage</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="multiple_permission">Multiple permission</string>
    <string name="activity">Activity</string>
    <string name="my_name">Rishita</string>
    <string name="rishitapanchal2707_gmail_com">rishitapanchal2707@gmail.com</string>
    <string name="menu_message">message</string>
    <string name="menu_settings">settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="profile">Profile</string>
    <string name="trash">trash</string>
    <string name="sync">sync</string>
</resources>