<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/new_message"
        android:title="@string/menu_message" />

    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/new_message"
        android:title="@string/sync" />

    <item
        android:id="@+id/trash"
        android:icon="@drawable/delete"
        android:title="@string/trash" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/settings"
        android:title="@string/menu_settings" />

    <item android:title="@string/my_profile">

        <menu>
            <item
                android:id="@+id/nav_profile1"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
        </menu>

    </item>

</menu>