<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.uiwidgets.FragmentUiC">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/exercise"
        android:textAllCaps="true"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/simple_list_view"
        android:textSize="@dimen/_13sdp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/list_view_with_image"
        android:textSize="@dimen/_13sdp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/simple_recycler_view"
        android:textSize="@dimen/_13sdp" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/recycler_view_with_item_decoration"
        android:textSize="@dimen/_13sdp" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/expandable_list_view"
        android:textSize="@dimen/_13sdp" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/expandable_recycler"
        android:textSize="@dimen/_13sdp" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/view_pager_demo"
        android:textSize="@dimen/_13sdp" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/bottom_navigation"
        android:textSize="@dimen/_13sdp" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/viewpager2"
        android:textSize="@dimen/_13sdp" />
</LinearLayout>